# Naive-Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README  makefile  readme.md
scenes/: aatest.txt  basic.txt  camera_look.txt  cuboid.txt  cylinder.txt  diagtest.txt  examplescene.txt  infplane_texture.txt  infreflection.txt  intersectplanes.txt  intersectspheres.txt  materials.txt  plane.txt  planelight.txt  reflection.txt  room.txt  sphere.txt  sphere_texture.txt  sphereplanelight.txt  triangle.txt
src/: AntiAliasing.cpp  AntiAliasing.h  Camera.cpp  Camera.h  Color.cpp  Color.h  ContainerObject.cpp  ContainerObject.h  Convolution.cpp  Convolution.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Diagnostic.h  Disk.cpp  Disk.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  ObjCamera.cpp  ObjCamera.h  ObjContainerObject.cpp  ObjContainerObject.h  ObjCuboid.cpp  ObjCuboid.h  ObjCylinder.cpp  ObjCylinder.h  ObjDisk.cpp  ObjDisk.h  ObjInfPlane.cpp  ObjInfPlane.h  ObjLight.cpp  ObjLight.h  ObjPlane.cpp  ObjPlane.h  ObjSceneObject.cpp  (+33 more)
src/EasyBMP/: EasyBMP.cpp  EasyBMP_BMP.h
